<resources>
    <string name="app_name">TheEvent</string>
    <string name="cargando">CARGANDO</string>
    <string name="noTienesCuenta"><b>¿No tienes cuenta?</b> Regístrate </string>
    <string name="olvidasteContra">¿Olvidaste tu contraseña? Haz Click Aqui!</string>
    <string name="usuario">Usuario</string>
    <string name="selectEvento">SELECCIONA UN EVENTO</string>
    <string name="misEventos">MIS EVENTOS</string>
    <string name="contrasena">Contraseña</string>
    <string name="contrasenaOld">Contraseña Actual</string>
    <string name="contrasenaNueva">Contraseña Nueva</string>
    <string name="agregarEvento">Agregar Evento</string>
    <string name="facebook_app_id">714600825383444</string>
    <string name="fb_login_protocol_scheme">fb518262088371101</string>
    <string name="nombre">Nombre</string>
    <string name="iniciarsesion">Iniciar Sesión</string>
    <string name="apaterno">Apellido Paterno</string>
    <string name="amaterno">Apellido Materno</string>
    <string name="telefono">Num. Telefono</string>
    <string name="quickstart_message">Click the SUBSCRIBE TO NEWS button below to subscribe to the
        news topic. Messages sent to the news topic will be received. The LOG TOKEN button logs the
        InstanceID token to logcat.</string>
    <string name="subscribe_to_news">Subscribe To News</string>
    <string name="log_token">Log Token</string>
    <string name="menu_navigation">Titulo</string>
    <string name="msg_subscribed">Subscribed to news topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="login">¿Ya tienes cuenta? Inicia Sesión</string>
    <string name="picture">Picture</string>
    <string name="correo">Correo</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="intro_message">Esta es la Camara2 API</string>
    <string name="imgevento">imgEvento</string>
    <string name="timeline">      TIMELINE</string>
    <string name="calendario">      ACTIVIDADES</string>
    <string name="ubicaciones">      UBICACIONES</string>
    <string name="notificaciones">      NOTIFICACIONES</string>
    <string name="infoevento">      INFORMACION</string>
    <string name="title_activity_asd">asd</string>
    <string name="sd">sd</string>
    <string name="escribirpublicacion">¿Qué estás pensando?</string>
    <string name="cancelar">Cancelar</string>
    <string name="escogerImagen">Imagen</string>
    <string name="publicar">Publicar</string>
    <string name="btnComentar">Comentar</string>
    <string name="escribirComentario">Escribe un comentario...</string>
    <string name="txtCategoria">Para mostrar ubicaciones debe seleccionar primero una categoria</string>
    <string name="comollegar">¿Cómo llegar?</string>
    <string name="uber">Pedir un Uber</string>
    <string name="buscar">Buscar...</string>
    <string name="info">      MI INFORMACION</string>
    <string name="noactividad">No se encontraron actividades disponibles</string>
    <string name="nocomentarios">No se encontraron comentarios disponibles</string>
    <string name="noeventos">No se encontraron eventos disponibles</string>
    <string name="noinfo">No se encontró información disponible</string>
    <string name="nonotificaciones">No se encontraron notificaciones disponibles </string>
    <string name="notimeline">No se encontraron publicaciones disponibles</string>
    <string name="noubicaciones">No se encontraron ubicaciones disponibles</string>
    <string name="saving_image">Guardando imagen</string>
    <string name="preparing_card">Preparing card</string>
    <string name="no_storage_card">No storage card</string>
    <string name="not_enough_space">Not enough space</string>
    <string name="title_activity_notificaciones">Notificaciones</string>
</resources>
