<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@mipmap/bglogin">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitCenter"
        android:src="@mipmap/logoblanco"
        android:layout_marginTop="72dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="12sp"
        android:ems="10"
        android:id="@+id/nombreR"
        android:hint="@string/nombre"
        android:enabled="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:layout_below="@+id/logo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp"
        android:background="@color/bginput"/>
    <View
        android:layout_width="fill_parent"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_height="1dip"
        android:background="@color/white"
        android:layout_below="@id/nombreR"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="12sp"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/emailTxtR"
        android:hint="@string/correo"
        android:enabled="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:layout_below="@+id/nombreR"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/bginput"/>
    <View
        android:layout_width="fill_parent"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_height="1dip"
        android:background="@color/white"
        android:layout_below="@id/emailTxtR"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="12sp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordTxtR"
        android:hint="@string/contrasena"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/emailTxtR"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="25dp"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:background="@color/bginput"/>

    <ImageView
        android:id="@+id/btn_FbR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/btnfacebooklogin"
        android:layout_alignTop="@+id/btn_TwitterR"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"/>

    <ImageView
        android:id="@+id/btn_TwitterR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/btntwitterlogin"
        android:layout_marginTop="41dp"
        android:layout_below="@+id/passwordTxtR"
        android:layout_alignRight="@+id/passwordTxtR"
        android:layout_alignEnd="@+id/passwordTxtR"
        android:layout_marginRight="25dp"
        android:layout_marginEnd="25dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/yatienesCuentaR"
        android:text="@string/login"
        android:layout_below="@+id/passwordTxtR"
        android:layout_centerHorizontal="true">

    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/registrateR"
        android:focusable="true"
        android:text="@string/olvidasteContra"
        android:layout_below="@+id/btn_FbR"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp">

    </TextView>

</RelativeLayout>
