<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@mipmap/bglogin">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitCenter"
        android:src="@mipmap/logoblanco"
        android:layout_marginTop="72dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="12sp"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/emailTxt"
        android:hint="@string/usuario"
        android:enabled="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:layout_below="@+id/logo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="80dp"
        android:background="@color/bginput"/>
    <View
        android:layout_width="fill_parent"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_height="1dip"
        android:background="@color/white"
        android:layout_below="@id/emailTxt"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="12sp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordTxt"
        android:hint="@string/contrasena"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/emailTxt"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="25dp"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:background="@color/bginput"/>

    <ImageView
        android:id="@+id/btn_Fb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/btnfacebooklogin"
        android:layout_alignTop="@+id/btn_Twitter"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"/>

    <ImageView
        android:id="@+id/btn_Twitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/btntwitterlogin"
        android:layout_marginTop="41dp"
        android:layout_below="@+id/btniniciar"
        android:layout_alignRight="@+id/passwordTxt"
        android:layout_alignEnd="@+id/passwordTxt"
        android:layout_marginRight="25dp"
        android:layout_marginEnd="25dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btniniciar"
        android:textSize="12sp"
        android:textColor="@color/black21"
        android:background="@mipmap/btnlogin"
        android:layout_below="@+id/passwordTxt"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/olvidasteLogin"
        android:clickable="true"
        android:text="@string/olvidasteContra"
        android:layout_below="@+id/btniniciar"
        android:layout_centerHorizontal="true">

    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/registrateLogin"
        android:text="@string/noTienesCuenta"
        android:layout_below="@+id/btn_Fb"
        android:clickable="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp">

    </TextView>

</RelativeLayout>
