<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MiInformacion"
    android:background="@color/white">
    <RelativeLayout
        android:id="@+id/timelineTitulo"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:padding="10dp">

        <Button
            android:id="@+id/btnDrawerTimeline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/info"
            android:textColor="@color/pink"
            android:layout_centerHorizontal="true"
            android:paddingBottom="10dp"
            android:textSize="22sp">
        </Button>

        <com.mikhaellopez.circularimageview.CircularImageView
            android:layout_width="40dp"
            android:layout_height="60dp"
            android:id="@+id/fotoEncabezado"
            app:civ_border="true"
            app:civ_border_width="1dp"
            app:civ_border_color="@color/gray"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:src="@drawable/carb"/>
        </RelativeLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="12sp"
        android:ems="10"
        android:id="@+id/nombreR"
        android:hint="@string/nombre"
        android:enabled="true"
        android:textColor="@color/black21"
        android:textColorHint="@color/black21"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:layout_below="@id/timelineTitulo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/miinfoinput"/>
    <View
        android:layout_width="fill_parent"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_height="1dip"
        android:background="@color/white"
        android:layout_below="@id/nombreR"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="12sp"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/emailTxtR"
        android:hint="@string/correo"
        android:enabled="true"
        android:textColor="@color/black21"
        android:textColorHint="@color/black21"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:layout_below="@+id/nombreR"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/miinfoinput"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>
    <View
        android:layout_width="fill_parent"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_height="1dip"
        android:background="@color/white"
        android:layout_below="@id/emailTxtR"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="12sp"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/telefono"
        android:hint="@string/telefono"
        android:enabled="true"
        android:textColor="@color/black21"
        android:textColorHint="@color/black21"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:layout_below="@+id/emailTxtR"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/miinfoinput"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>
    <View
        android:layout_width="fill_parent"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_height="1dip"
        android:background="@color/white"
        android:layout_below="@id/telefono"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="12sp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordTxtR"
        android:hint="@string/contrasenaOld"
        android:textColor="@color/black21"
        android:textColorHint="@color/black21"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/telefono"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:background="@drawable/miinfoinput"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>
    <View
        android:layout_width="fill_parent"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_height="1dip"
        android:background="@color/white"
        android:layout_below="@id/passwordTxtR"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="12sp"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/newPass"
        android:hint="@string/contrasenaNueva"
        android:enabled="true"
        android:textColor="@color/black21"
        android:textColorHint="@color/black21"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:layout_below="@+id/passwordTxtR"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="5dp"
        android:background="@drawable/miinfoinput"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Guardar Cambios"
        android:id="@+id/guardar"
        android:textSize="12sp"
        android:textColor="@color/black21"
        android:background="@drawable/grey_button"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/newPass"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Regresar"
        android:id="@+id/cancelar"
        android:textSize="12sp"
        android:textColor="@color/black21"
        android:background="@drawable/grey_button"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/newPass"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/guardar"
        android:layout_toEndOf="@+id/guardar"
        android:layout_marginTop="15dp"/>


</RelativeLayout>
